Fix image scaling on large images on small screens

--- a/css/default.css
+++ b/css/default.css
@@ -66,12 +66,13 @@ div #navigation
 }
 
 #full-image {
-  float : left;
   max-width: 80%;
   overflow: hidden;
 }
 
 #full-image img {
+	width: 100%;
+	height: auto;
 }
 
 #full-image p {
